<resources>
    <string name="app_name">Paint</string>
    <string name="settings">Definiçoes</string>
    <string name="profile">Perfil</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="paint">Paint</string>

    <string name="about">About</string>
    <string name="bem_vindo_ao_paint">Bem Vindo, ao Paint!</string>
    <string name="grupo_8">Grupo 8</string>
    <string name="mudar_a_cor_de_background">Mudar a cor de background</string>
    <string name="mudar_cor">Mudar Cor</string>
    <string name="desenhem_e_desfrutem">Desenhem e desfrutem!</string>
    <string name="duarte_olival" translatable="false">Duarte Olival</string>
    <string name="bruna_vieites" translatable="false">Bruna Vieites</string>
    <string name="pedro_sobreira" translatable="false">Pedro Sobreira</string>
    <string name="pedro_51012" translatable="false">51012</string>
    <string name="bruna_55792" translatable="false">55792</string>
    <string name="duarte_55736" translatable="false">55736</string>
    <string name="duarte_linkedin" translatable="false">Duarte Linkedin</string>
    <string name="bruna_linkedin" translatable="false">Bruna Linkedin</string>
    <string name="bruna_facebook" translatable="false">Bruna Facebook</string>
    <string name="bruna_instagram" translatable="false">Bruna Instagram</string>
    <string name="duarte_facebook" translatable="false">Duarte Facebook</string>
    <string name="duarte_instagram" translatable="false">Duarte Instagram</string>
    <string name="sobreira_linkedin" translatable="false">Sobreira Linkedin</string>
    <string name="sobreira_facebook" translatable="false">Sobreira Facebook</string>
    <string name="sobreira_instagram" translatable="false">Sobreira Instagram</string>
    <string name="title_activity_paint" translatable="false">PaintActivity</string>

    <string name="pincel">Pincel</string>
    <string name="cor">Cor</string>
    <string name="esperssura_do_pincel">Espessura do pincel</string>
    <string name="cor_canvas">cor canvas</string>
    <string name="atual">Atual:</string>
    <string name="cor_canvas_alterada">Cor do Canvas Alterada</string>
    <string name="cor_pincel_alterada">Cor Pincel Alterada</string>
    <string name="dark_mode">Modo Escuro</string>
    <string name="dark_mode_automatico_aos_20_de_bateria">Modo escuro automatico aos 20% de bateria</string>
    <string name="canvasContentDescription" translatable="false">Mini Paint is a simple line drawing app.
   Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="map">Mapa</string>
    <string name="start_routing" translatable="false">Start Drawing</string>
    <string name="stop_drawing" translatable="false">Stop Drawing</string>
    <string name="historico_de_percursos">Histórico de percursos</string>
    <string name="origem">Origem:</string>
    <string name="destino">Destino:</string>

    <string name="sem_permissao">Acesso negado à camera</string>
    <string name="com_permissao">Acesso garantido à camera</string>
    <string name="sem_foto">Ainda não tirou uma foto ao lugar</string>
    <string name="clean">Apagar</string>
    <string name="save">Guardar</string>
    <string name="get_history_canvas" translatable="false">get history canvas</string>
    <string name="insira_o_nome_da_imagem">Insira o nome da imagem</string>
    <string name="guardar">Guardar</string>
    <string name="canvas_historico">Canvas Histórico</string>
    <string name="sem_titulo">Sem titulo</string>
    <string name="camera">Camera</string>
    <string name="ecra_apagado">ecra apagado</string>

</resources>