<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/settings"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textNoturno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mudar_a_cor_de_background"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_button_change_color"
            app:layout_constraintBottom_toBottomOf="@+id/settings_button_change_color"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/settings_button_change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:elevation="5dp"
            fancy:fb_borderColor="@color/white"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/settingsButton"
            fancy:fb_focusColor="@color/settingsButton"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/mudar_cor"
            fancy:fb_textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/darkMode"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_button_change_color"
            android:paddingTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchButtondark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:buttonTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/darkModeAutomatico"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/darkMode"
            android:paddingTop="10dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textDarkAutomatico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode_automatico_aos_20_de_bateria"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchButtondarkAutomatico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:buttonTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>